--- a/i18n/es_CL.po
+++ b/i18n/es_CL.po
@@ -22,6 +22,12 @@ msgstr ""
 msgid "%d days overdue"
 msgstr "%d dias atrasados"
 
+#. module: auth_signup
+#: model_terms:ir.ui.view,arch_db:auth_signup.fields
+#: model_terms:ir.ui.view,arch_db:auth_signup.reset_password
+msgid "Your Email"
+msgstr "Tu Correo"
+
 #. module: portal
 #: code:addons/portal/controllers/portal.py:277
 #, python-format
