--- a/i18n/es_CL.po
+++ b/i18n/es_CL.po
@@ -26,7 +26,7 @@ msgstr "%d dias atrasados"
 #: model_terms:ir.ui.view,arch_db:auth_signup.fields
 #: model_terms:ir.ui.view,arch_db:auth_signup.reset_password
 msgid "Your Email"
-msgstr "Tu Correo"
+msgstr "Su correo electrónico"
 
 #. module: portal
 #: code:addons/portal/controllers/portal.py:277
@@ -37,7 +37,7 @@ msgstr "%s no es la referencia de un informe"
 #. module: portal
 #: model_terms:ir.ui.view,arch_db:portal.portal_show_sign_in
 msgid "<b>Sign in</b>"
-msgstr "<b>Iniciar Sesión / Registrarse</b>"
+msgstr "<b>Iniciar Sesión</b>"
 
 #. module: portal
 #: model_terms:ir.ui.view,arch_db:portal.portal_back_in_edit_mode
@@ -361,14 +361,6 @@ msgid "Home"
 msgstr "Inicio"
 
 #. module: portal
-#: model:ir.model.fields,field_description:portal.field_portal_mixin__id
-#: model:ir.model.fields,field_description:portal.field_portal_share__id
-#: model:ir.model.fields,field_description:portal.field_portal_wizard__id
-#: model:ir.model.fields,field_description:portal.field_portal_wizard_user__id
-msgid "ID"
-msgstr ""
-
-#. module: portal
 #: model:ir.model.fields,field_description:portal.field_portal_wizard_user__in_portal
 msgid "In Portal"
 msgstr "En el portal"
@@ -456,11 +448,6 @@ msgstr "Siguiente"
 #: model:ir.model.fields,field_description:portal.field_portal_share__note
 msgid "Note"
 msgstr "Nota"
-
-#. module: portal
-#: model_terms:ir.ui.view,arch_db:portal.frontend_layout
-msgid "Odoo"
-msgstr ""
 
 #. module: portal
 #: model_terms:ir.ui.view,arch_db:portal.portal_record_sidebar
@@ -724,7 +711,7 @@ msgstr "Estás invitado a acceder %s"
 #. module: portal
 #: model_terms:ir.ui.view,arch_db:portal.portal_share_template
 msgid "You have been invited to access the following document:"
-msgstr ""
+msgstr "Has sido invitado a acceder al siguiente documento"
 
 #. module: portal
 #. openerp-web
@@ -823,3 +810,31 @@ msgstr "seleccionar..."
 #, python-format
 msgid "to post a comment."
 msgstr "escribir un comentario."
+
+#. module: web
+#: model_terms:ir.ui.view,arch_db:web.login
+msgid "Email"
+msgstr "Correo electrónico"
+
+#. module: website_sale
+#: model_terms:ir.ui.view,arch_db:website_sale.checkout
+msgid "Email"
+msgstr "Correo electrónico"
+
+#. module: project
+#: model_terms:ir.ui.view,arch_db:project.edit_project
+msgid "Emails"
+msgstr "Correo electrónico"
+
+#. module: point_of_sale
+#. openerp-web
+#: code:addons/point_of_sale/static/src/xml/pos.xml:343
+#: code:addons/point_of_sale/static/src/xml/pos.xml:378
+#, python-format
+msgid "Email"
+msgstr "Correo electrónico"
+
+#. module: website_crm
+#: model_terms:ir.ui.view,arch_db:website_crm.contactus_form
+msgid "Email"
+msgstr "Correo electrónico"
